--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://10.0.0.110:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
