Download now works

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://10.0.0.110:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+enable.scraping=true
+download.scan.task.interval.milliseconds=900000
+download.scan.task.max.files=3
+
+
+anime.ultima.root=https://www17.animeultima.eu/e/
+
+external.drive.path=/Users/eau/Documents/Test-landing-path/
