--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ dependencies {
 	}
 
 	compile 'org.jsoup:jsoup:1.12.1'
+	compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.10.4'
+
+	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0-alpha-4'
+	compile("io.github.bonigarcia:webdrivermanager:3.8.1")
+
 
 }
 
