--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,10 @@ dependencies {
 
 	compile 'org.jsoup:jsoup:1.12.1'
 	compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.10.4'
-
 	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0-alpha-4'
 	compile("io.github.bonigarcia:webdrivermanager:3.8.1")
+	compile group: 'commons-io', name: 'commons-io', version: '2.6'
+
 
 
 }
