--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 enable.scraping=true
-download.scan.task.interval.milliseconds=900000
-download.scan.task.max.files=3
+# 2 min
+download.scan.task.interval.milliseconds=120000
+#download.scan.task.max.files=8
 
+enable.transfer=true
+# 3 min
+pi.transfer.task.interval.milliseconds=180000
 
 anime.ultima.root=https://www17.animeultima.eu/e/
 
-external.drive.path=/Users/eau/Documents/Test-landing-path/
+local.download.path=/Users/eau/Documents/Test-landing-path/
+pi.landing.folder=/home/pi/Landing_Folder/
