--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+enable.scraping=true
+# 2 min
+download.scan.task.interval.milliseconds=120000
+#download.scan.task.max.files=8
 
+enable.transfer=true
+# 3 min
+pi.transfer.task.interval.milliseconds=180000
+
+anime.ultima.root=https://www17.animeultima.eu/e/
+
+local.download.path=/Users/eau/Documents/Test-landing-path/
+pi.landing.folder=/home/pi/Landing_Folder/
